--- a/style.css
+++ b/style.css
@@ -1,24 +1,89 @@
-#step1 {
-    text-align : justify ;
+@media screen and (min-width: 1201px) {
+    #grid_container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+@media (max-width: 768px) {
+    #grid_container {
+        grid-template-columns: repeat(2, 1fr); /* pour tablettes */
+    }
+    h1 {
+        font-size: 40px; /* Réduit la taille du titre */
+    }
+}
+@media (max-width: 480px) {
+    #grid_container {
+        grid-template-columns: 1fr; /* pour smartphones */
+    }
+    h1 {
+        font-size: 30px;
+    }
+}
+
+#ligne_haut {
     text-align : center;
     text-align: start ;
 }
 
-#step2 {
-    text-align: justify;
-    text-align: end;
+#logo {
+    text-align: right;
 }
-
+nav {
+    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 2px;
+    grid-row-gap: 5px;
+    margin-left: 10%;
+    margin-right: 10%;
+    color: aliceblue;
+}
 body {
     background-color : rgb(4 24 33);
+    margin : 0% ;
 }
-
+h1 {
+    font-size: 60px;
+    margin: 0%;
+}
+#fond {
+    background-color: #1ad69b ;
+    margin-right: auto;
+}
+@font-face {
+    font-family: "YO";
+    src:
+      local("Trickster"),
+      url("police/YesevaOne-Regular.ttf") format("opentype");
+  }
+@font-face {
+    font-family: "MON";
+    src:
+      local("Trickster"),
+      url("police/Montserrat-Black.ttf") format("opentype");
+  }
 .macouleur1 {
-    color : white 
-    }
+    color : white ;
+    font-family: YO;
+}
+    
 .macouleur2 {
     color :rgb(23 213 154);
-    }
+    font-family: YO;
+}
+    
 .macouleur3 {
-    color : rgb(108 116 121)
+    color : rgb(108 116 121) ;
+}
+
+main {
+    margin: auto;
+    width: 75%;
+    font-family: YO;
+}
+
+footer {
+    text-align: center;
+    margin-top: 50px;
 }
